# ofxstatement-fidelity

./: .gitignore  Makefile  Pipfile  README.md  pyproject.toml
.github/workflows/: test.yml
src/ofxstatement_fidelity/: plugin.py
tests/: History_for_Account_2TB000009.csv  History_for_Account_TEST2139.csv  History_for_Account_TEST2944.csv  History_for_Account_TEST2986.csv  History_for_Account_TEST9891.csv  tbill.csv  tbill.ofx  test_parser.py  test_sample.py
tools/: obfuscate.py
