[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ofxstatement-fidelity"
version = "0.1.0"
authors = [
  { name="Dan Moore", email="dan@suncup.net" },
]
description = "ofxstatement plugin for Fidelity CSV exports"
readme = "README.md"
requires-python = ">=3.9"
license-files = ["LICENSE.txt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Natural Language :: English",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Utilities",
    "Environment :: Console",
    "Operating System :: OS Independent",
]
keywords = ["ofx", "banking", "statement", "plugin", "ofxstatement", "fidelity", "csv"]
dependencies = [
  "ofxstatement",
]

[project.urls]
Homepage = "https://github.com/mooredan/ofxstatement-fidelity/"

[project.entry-points."ofxstatement"]
fidelity = "ofxstatement_fidelity.plugin:FidelityPlugin"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
